sample/retrieveUnpackaged/objects/Action_Item__c.object
<CustomObject>
    <description>Captures Action Plan data on Watermap.</description>
    <fields>
        <fullName>Action_Category__c</fullName>
        <label>Action Category</label>
        <picklist>
            <picklistValues>
                <fullName>Amenities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment &amp; Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recycled Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming pools and Dams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff / tenant  engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Subject__c</fullName>
        <label>Action Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <controllingField>Action_Category__c</controllingField>
            <picklistValues>
                <fullName>Abide by all water restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access suitability of using recycled water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjust urinal sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appoint staff to manage and monitor waterMAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build new dam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capture and reuse fire service testing water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change fire service testing regime to monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check / adjust ball floats on process top-ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check / review fire service testing regime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collect / recycle condensate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collect and reuse on-site process water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collect irrigation run-off for re-use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparison against industry benchmarks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduct cleaner production audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduct cooling tower audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduct water audit (consultant study)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduct water audit (internal study)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect to Class A recycled system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue to remind staff to adopt water efficient practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop business case for project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop case studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop feasibility study for project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop specific benchmarks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop water &apos;mass balance&apos; across site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divert and collect stormwater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engage contracted water conservation service providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engage tenants in water efficient practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engage with industry groups for assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enlarge existing dam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensure fire service is not used illegally</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Savings_Other_Cost_Per_Yr__c</fullName>
        <label>Estimated Savings - Other $ / Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Savings_Water_Cost_Per_Yr__c</fullName>
        <label>Estimated Savings - Water $ / Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Savings_Water_Usage_Per_Yr__c</fullName>
        <label>Estimated Savings - Water KL / Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is SEW funding required?</description>
        <label>Funding Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Ongoing_Initiative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing Initiative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Term_Actions__c</fullName>
        <label>Long Term Actions (&gt;2 years)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Medium_Term_Actions__c</fullName>
        <label>Medium Term Actions (6 months-2 years)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ongoing_and_Future_Consideration_Actions__c</fullName>
        <label>Ongoing and Future Consideration Actions</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Action_Type__c</fullName>
        <label>Other Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_ID__c</fullName>
        <formula>Watermap__r.Customer__r.Parent.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payback_Years_Calc__c</fullName>
        <formula>IF(Estimated_Savings_Other_Cost_Per_Yr__c  +  Estimated_Savings_Water_Cost_Per_Yr__c &lt;&gt; 0, Cost__c  / ( Estimated_Savings_Other_Cost_Per_Yr__c  +  Estimated_Savings_Water_Cost_Per_Yr__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payback (Years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Comments__c</fullName>
        <label>Project Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Completion_Date__c</fullName>
        <label>Scheduled Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Term_Actions__c</fullName>
        <label>Short Term Actions(3-6 months)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Watermap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Watermap</label>
        <referenceTo>WaterMAP__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_Action_Completed__c</fullName>
        <label>Year Action Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Action_Category__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Action Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <recordTypes>
        <fullName>Non_WaterMAP_ActionPlan</fullName>
        <active>true</active>
        <description>Action Plans that are NOT related to WaterMap, such as Council Action Plan.</description>
        <label>Non-WaterMAP ActionPlan</label>
    </recordTypes>
    <recordTypes>
        <fullName>WaterMAP_Action_Item</fullName>
        <active>true</active>
        <description>WaterMAP related Action Items that are categorised and marked with Status.</description>
        <label>WaterMAP Action Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>